--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-paper": "^5.8.0",
+    "react-native-safe-area-context": "^4.5.3",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.18.10"
   },
