--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.71.8",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated-table": "^0.0.2",
-    "react-native-safe-area-context": "^4.5.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-shadow-cards": "^1.0.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.18.10"
   },
