--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.18",
@@ -21,7 +22,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.13",
     "react-native-event-listeners": "^1.0.7",
+    "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.5.0",
