--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.18",
@@ -25,7 +26,10 @@
     "react-native-date-picker": "^4.2.13",
     "react-native-event-listeners": "^1.0.7",
     "react-native-modal-datetime-picker": "^15.0.1",
+    "react-native-modal-picker": "^0.0.16",
     "react-native-paper": "^5.8.0",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-shadow-cards": "^1.0.2",
