--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-modal-picker": "^0.0.16",
     "react-native-paper": "^5.8.0",
     "react-native-paper-dropdown": "^1.0.7",
+    "react-native-picker-modal-view": "^1.3.2",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-shadow-cards": "^1.0.2",
