--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "~48.0.18",
+    "expo": "^48.0.20",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "firebase": "^9.22.2",
@@ -25,6 +25,7 @@
     "react-native": "0.71.8",
     "react-native-date-picker": "^4.2.13",
     "react-native-event-listeners": "^1.0.7",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-modal-picker": "^0.0.16",
     "react-native-paper": "^5.8.0",
